# Optimiser_Engine-v2.0

./: LICENSE  README.md  a.db  db_engine_sqlite.db  db_engine_sqlite_export.sql  exemple.db  pyproject.toml  test.db
DB_manager_models/: base_db.py  client_manager.py  main_manager.py  optimise_manager.py
apps/simulator/: main.py
apps/simulator_simple/: Journee_moyenne.csv  correspondences.json  lille_irradiance_2020.csv  main.py  weather_lille.csv
client_models/: __init__.py  constraints.py  prices_model.py  water_heater_model.py
database/: mysql_db_v1.sql
examples/: all.ipynb  client_creation.ipynb  client_sample.yaml  dbmanager_use.ipynb  service_use.ipynb  trajectory_manipulation.ipynb  weather.csv
manager_API/: client_manager.py
models /: client.py  common.py  constraints.py  features_models.py
optimiser_service/: service.py  solver.py
src/optimiser_engine/: __init__.py  exceptions.py
src/optimiser_engine/domain/: __init__.py  client.py  common.py  consignes_models.py  constraints.py  features_models.py  prices_model.py  water_heater_model.py
src/optimiser_engine/engine/: __init__.py  service.py  solver.py
tests/test_clients/: test_class.py
tests/unit/: test_client_conversion.py
tests/unit/domain/: README.md  conftest.py  test_client.py  test_common.py  test_consignes_planning.py  test_constraints.py  test_features_prices.py  test_water_heater.py
tests/unit/engine/: README.md  conftest.py  test_external_context.py  test_optimization_inputs.py  test_service.py  test_solver.py  test_system_config.py  test_trajectory.py
(+23 files in other folders)
